Implemented Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ SF_USERNAME=damankumar@geminidsystems.com
 SF_PASSWORD=Daman62327j26FdtX4aK9y4MEeU0Dvbsxy
 SF_API_VER=37
 SF_API_END=https://login.salesforce.com/services/Soap/u/${SF_API_VER}
+LOGIN_USERNAME=geminid
+LOGIN_PASSWORD=password
