--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,16 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.mozilla/rhino -->
 		<dependency>
 			<groupId>org.mozilla</groupId>
